--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,4 +2,8 @@ title: saving-scratch
 hero_image: images/banner.png
 subtitle: saving-scratch subtitle
 description: saving-scratch description
-published: 'false'
+published: false
+
+steps:
+  - title: Step one
+    duration: 25
