--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,9 +1,7 @@
-title: saving-scratch
+title: Saving a Scratch project
 hero_image: images/banner.png
-subtitle: saving-scratch subtitle
-description: saving-scratch description
+description: Saving a Scratch project
 published: false
 
 steps:
   - title: Step one
-    duration: 25
