--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,5 +5,8 @@ theme: cc-prototype
 duration: 1
 listed: false
 ingredient: true
+copyedit: true
+interests:
+technologies: "scratch"
 steps:
   - title: Save your project
