--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,6 +3,7 @@ hero_image: images/banner.png
 description: Saving a Scratch project
 theme: cc-prototype
 duration: 1
+currciulum:
 listed: false
 ingredient: true
 copyedit: true
