Add Bengali, Japanese and Persian + update Hindi and Chinese

--- a/hi-IN/meta.yml
+++ b/hi-IN/meta.yml
@@ -1,3 +1,4 @@
+---
 title: Scratch प्रोजेक्ट को सहेजना
 hero_image: images/banner.png
 description: Scratch प्रोजेक्ट को सहेजना
@@ -8,6 +9,6 @@ listed: false
 ingredient: true
 copyedit: true
 interests:
-technologies: “scratch"
+technologies: "scratch"
 steps:
-  - title: Scratch प्रोजेक्ट को सहेजें
+  - title: अपने प्रोजेक्ट को सहेजें
